--- a/data/projects/2014-07-05-project-1.yaml
+++ b/data/projects/2014-07-05-project-1.yaml
@@ -2,7 +2,7 @@ modalID: 1
 title: Locutor en "Jesus y los niños"
 subtitle: Programa de Radio
 date: 2015-07-05
-img: roundicons.jpg
+img: 1-nuevo.jpg
 preview: roundicons-preview.jpg
 client: Programa "Jesus y los niños"
 clientLink: "#"
