--- a/data/projects/2014-07-08-project-4.yaml
+++ b/data/projects/2014-07-08-project-4.yaml
@@ -2,7 +2,7 @@ modalID: 4
 title: Hysteria
 subtitle: La Casa del Terror
 date: 2017-11-08
-img: Hysteria.jpg
+img: Hysteria-nueva.jpg
 preview: Hysteria-preview.jpg
 client: Hysteria
 clientLink: "#"
