--- a/data/projects/2014-07-09-project-5.yaml
+++ b/data/projects/2014-07-09-project-5.yaml
@@ -3,7 +3,7 @@ title: FEVA
 subtitle: Arte Bolivia
 date: 2018-07-09
 img: feva.jpg
-preview: feva-preview.jpg
+preview: 5-preview.jpg
 client: FEVA - Arte Bolivia
 clientLink: "#"
 category: Proyectos
